--- a/Ballegro Player/page3.html
+++ b/Ballegro Player/page3.html
@@ -2,15 +2,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="Styling 1.css">
 <title>Arts Technology Designs</title>
 </head>
 
 <body>
-<h1>Web Designer for Ballegro App: </h1>
+<h1>Web Designer for Ballegro App:</h1>
 <ul>
-
+  <li><a href="Index.html">Home</a></li>
+  <li><a href="page1.html">How to Create a Design</a></li>
+  <li><a href="page2.html">How To Promote an App</a></li>
+  <li><a href="page3.html">Previous Designs Blog</a></li>
+</ul>
 
 <p>Oops, we don't really need this page.</p>
+<img id="img-ball" src="images/got em.gif" alt=" got em">
 
 </body>
 </html>
