--- a/Brick Brick Brick/8_startfileGrid.html
+++ b/Brick Brick Brick/8_startfileGrid.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
-<head><!DOCTYPE HTML>
-<html>
 <head>
     <meta charset="UTF-8">
-    <title>Untitled Document</title>
-    <link href="Style8.css" rel="stylesheet" type="text/css" >
+    <title>Grid Page</title>
+    <link href="Style8Grid.css" rel="stylesheet" type="text/css" >
+    <link rel="icon" type="image/png" href="/Art Bases/New Logo Babyyyyyyy.png">
 </head>
 
 <body>
@@ -23,7 +22,11 @@
         <li><a href="http://my.ilstu.edu/~rnvalen/Summer2014/06.BasicCSS2.html" target="_blank">Basic CSS 2</a></li>
         <li><a href="http://my.ilstu.edu/~rnvalen/Summer2014/07.AdvancedCSS.html" target="_blank">Advanced CSS</a></li>
     </ul>
+    <iframe src="https://www.youtube.com/embed/MmS-ZnZbrTI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdpBpgfX7uzifuaDCmx-2f-nvmt_ZmIVXdNnjNPYUn6gTXP7g/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 </nav>
+
 
 <main>
   <h2>Secondary header</h2>
@@ -34,12 +37,16 @@
 
     <p class="Text"> The links in the following paragraphs should be red, bold, and without an underline in their "normal" (visted or unvisited) state. The links should turn blue with an underline when they are hovered over.</p>
 
+    <audio controls>
+      <source src="ATK301/Brick Brick Brick/Kanye West-UseThisGospel" type="audio/mpeg" />
+    </audio>
+
 
     <p> Duis tattooed tofu, anim occaecat delectus banh mi freegan tempor nihil velit keytar tumblr DIY terry richardson. Excepteur nesciunt <a class="Hel" href="http://en.wikipedia.org/wiki/Helvetica" target="_blank">helvetica</a>, trust fund master cleanse assumenda keffiyeh raw denim consectetur vegan stumptown salvia. You probably haven't heard of them lo-fi aesthetic nostrud, high life <a class="Hel" href="http://www.mcsweeneys.net/" target="_blank">mcsweeney's</a> consectetur cred quinoa id sed tumblr photo booth. American apparel nulla yr banh mi culpa consectetur. Et thundercats seitan next level. Twee ethical nesciunt four loko whatever put a bird on it. Master cleanse pariatur dolor, put a bird on it twee locavore assumenda PBR.</p>
 
     <p>Irure irony banh mi, gentrify letterpress aliqua chambray marfa portland ea messenger bag. Marfa vero portland, quis messenger bag artisan placeat aute proident +1 qui twee iphone. American apparel elit eiusmod, quinoa accusamus pariatur marfa. Esse shoreditch commodo, tofu mollit anim scenester <a class="Hel" href="http://www.ifc.com/portlandia/" target="_blank">portland</a> organic. Cardigan 3 wolf moon in next level, nisi id farm-to-table you probably haven't heard of them aliqua art party brooklyn mcsweeney's stumptown williamsburg marfa. <a class="Hel" href="http://en.wikipedia.org/wiki/Do_it_yourself" target="_blank">DIY</a> fanny pack mlkshk, sapiente single-origin coffee dolore yr commodo vinyl. Adipisicing carles bicycle rights, assumenda organic portland blog commodo skateboard williamsburg.</p>
 
-    <p class="Foot">This footer is Verdana in italics. Don't use the &lt;i&gt; or &lt;em&gt; tags to make this text italicized - use styles instead.</p>
+<p class="Foot">This footer is Verdana in italics. Don't use the &lt;i&gt; or &lt;em&gt; tags to make this text italicized - use styles instead.</p>
 </main>
 </div>
 </body>
