--- a/Brick Brick Brick/8_startfileFloat.html
+++ b/Brick Brick Brick/8_startfileFloat.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Untitled Document</title>
-    <link href="Style8.css" rel="stylesheet" type="text/css" >
+    <link href="Style8Float.css" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
